src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__module_declaration.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: Some(
        ModuleDecl {
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 7,
                            end: 16,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 17,
                            end: 22,
                            start_line: 1,
                            start_col: 18,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 23,
                            end: 30,
                            start_line: 1,
                            start_col: 24,
                        },
                    },
                ],
                span: Span {
                    start: 7,
                    end: 30,
                    start_line: 1,
                    start_col: 8,
                },
            },
            span: Span {
                start: 0,
                end: 31,
                start_line: 1,
                start_col: 1,
            },
        },
    ),
    imports: [],
    declarations: [],
    span: Span {
        start: 0,
        end: 31,
        start_line: 1,
        start_col: 1,
    },
}
