src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__move_closure.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Closure {
                                    is_move: true,
                                    params: [
                                        ClosureParam {
                                            pattern: Pattern {
                                                kind: Ident {
                                                    by_ref: false,
                                                    mutable: false,
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 15,
                                                            end: 16,
                                                            start_line: 1,
                                                            start_col: 16,
                                                        },
                                                    },
                                                    subpattern: None,
                                                },
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                            ty: None,
                                            span: Span {
                                                start: 15,
                                                end: 16,
                                                start_line: 1,
                                                start_col: 16,
                                            },
                                        },
                                    ],
                                    return_type: None,
                                    effects: None,
                                    body: Expr {
                                        kind: Binary {
                                            op: Mul,
                                            left: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 18,
                                                                        end: 19,
                                                                        start_line: 1,
                                                                        start_col: 19,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 18,
                                                            end: 19,
                                                            start_line: 1,
                                                            start_col: 19,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 18,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            right: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 2,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 22,
                                                            end: 23,
                                                            start_line: 1,
                                                            start_col: 23,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 22,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 23,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 18,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 19,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 23,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 25,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 25,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 25,
        start_line: 1,
        start_col: 1,
    },
}
